<resources>
    <string name="app_name">Task Flow</string>
    <string name="login">Login</string>
    <string name="email">E-mail</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="new_account">New account?</string>
    <string name="register">Register</string>
    <string name="confirm_password">Confirm password</string>
    <string name="recover_password">Recover password</string>
    <string name="habit">Habit</string>
    <string name="daily">Daily</string>
    <string name="to_do">To Do</string>
    <string name="account">Account</string>
    <string name="create">Create</string>
    <string name="login_google">Login with Google</string>
    <string name="separator">/</string>
    <string name="level">Lvl.</string>
    <string name="account_info">Account info</string>
    <string name="modify">Modify</string>
    <string name="accept">Accept</string>
    <string name="denied">Denied</string>
    <string name="settings">Settings</string>
    <string name="language">Language</string>
    <string name="theme">Theme</string>
    <string name="notifications">Notifications</string>
    <string name="logout">Logout</string>
    <string name="delete">Delete</string>
    <string name="back">Back</string>
    <string name="create_habit">Create habit</string>
    <string name="update_habit">Update habit</string>
    <string name="title">Title</string>
    <string name="notes">Notes</string>
    <string name="positive">Positive</string>
    <string name="negative">Negative</string>
    <string name="difficulty">Difficulty</string>
    <string name="trivial">Trivial</string>
    <string name="easy">Easy</string>
    <string name="medium">Medium</string>
    <string name="hard">Hard</string>
    <string name="reset_counter">Reset counter</string>
    <string name="weekly">Weekly</string>
    <string name="monthly">Monthly</string>
    <string name="save">Save</string>
    <string name="create_daily">Create daily</string>
    <string name="scheduling">Scheduling</string>
    <string name="start_date">Start date</string>
    <string name="reminder">Reminder</string>
    <string name="create_to_do">Create to do</string>
    <string name="delete_account">Delete account</string>
    <string name="error_email_empty">Insert email</string>
    <string name="error_password_empty">Insert password</string>
    <string name="error_not_equals">Passwords are not equals</string>
    <string name="error_password_short">Password must contain 8 character</string>
    <string name="account_created">Account created.</string>
    <string name="error_saving">Unable to save data from Internet to local. Try later.</string>
    <string name="error_login">Email or password are wrong.</string>
    <string name="error_reading">Unable to read credentials. Try later.</string>
    <string name="error_credentials_empty">Insert credentials</string>
    <string name="account_deleted">Account deleted.</string>
    <string name="error_deleting">Unable to delete account.</string>
    <string name="error_retrieve_password">Unable to retrieve password</string>
    <string name="error_change_email">Unable to update the email</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="email_sent">Email sent</string>
    <string name="insert_email">Insert email</string>
    <string name="insert_fields">Insert all fields</string>
    <string name="habit_created">Habit created</string>
    <string name="habit_updated">Habit updated</string>
    <string name="daily_created">Daily created</string>
    <string name="to_do_created">To do created</string>
    <string name="error_position">Unable to locate the device</string>
    <string name="permission_granted">Permission granted</string>
    <string name="permission_denied">Permission denied. Please accept the permission</string>
    <string name="habit_deleted">Habit deleted</string>
</resources>