<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/empty_button"
        android:title=""
        android:enabled="false">
    </item>

    <item
        android:id="@+id/habit_item"
        android:contentDescription="@string/habit"
        android:title="@string/habit"
        android:icon="@drawable/habit_filled">
    </item>

    <item
        android:id="@+id/fab_button"
        android:title=""
        android:enabled="false">
    </item>

    <item
        android:id="@+id/account_item"
        android:contentDescription="@string/account"
        android:title="@string/account"
        android:icon="@drawable/account_outlined">
    </item>

    <item
        android:id="@+id/settings_item"
        android:contentDescription="@string/settings"
        android:title="@string/settings"
        android:icon="@drawable/settings_outlined">
    </item>

</menu>