<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.create.CreateDailyFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/start_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="24dp">
    </androidx.constraintlayout.widget.Guideline>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/end_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="24dp">
    </androidx.constraintlayout.widget.Guideline>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="?attr/materialIconButtonStyle"
        app:layout_constraintStart_toStartOf="@id/start_guideline"
        app:layout_constraintTop_toTopOf="parent"
        app:icon="@drawable/back"
        app:iconTint="@color/black"
        android:contentDescription="@string/back"
        android:layout_marginTop="36dp">
    </com.google.android.material.button.MaterialButton>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/create_to_do_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@+id/back_button"
        app:layout_constraintBaseline_toBaselineOf="@id/create_button"
        android:text="@string/create_daily"
        android:layout_marginStart="24dp"
        android:textSize="20sp">
    </com.google.android.material.textview.MaterialTextView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/delete_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/Widget.Material3.Button.TextButton"
        app:layout_constraintEnd_toStartOf="@id/create_button"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/delete"
        android:textSize="15sp"
        android:layout_marginTop="36dp"
        android:visibility="invisible"
        android:textAlignment="textEnd">
    </com.google.android.material.button.MaterialButton>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/save_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/Widget.Material3.Button.TextButton"
        app:layout_constraintEnd_toEndOf="@id/end_guideline"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/save"
        android:textSize="15sp"
        android:layout_marginTop="36dp"
        android:textAlignment="textEnd"
        android:visibility="invisible">
    </com.google.android.material.button.MaterialButton>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/create_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/Widget.Material3.Button.TextButton"
        app:layout_constraintEnd_toEndOf="@id/end_guideline"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/create"
        android:textSize="15sp"
        android:layout_marginTop="36dp"
        android:textAlignment="textEnd">
    </com.google.android.material.button.MaterialButton>

    <com.google.android.material.progressindicator.CircularProgressIndicator
        android:id="@+id/daily_progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@id/end_guideline"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="36dp"
        android:visibility="invisible"
        android:indeterminate="true">
    </com.google.android.material.progressindicator.CircularProgressIndicator>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/title_text_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/start_guideline"
        app:layout_constraintEnd_toEndOf="@+id/end_guideline"
        app:layout_constraintTop_toBottomOf="@id/create_to_do_text"
        android:layout_marginTop="24dp"
        app:endIconMode="clear_text">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/title_edit_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/title"
            android:inputType="textShortMessage">
        </com.google.android.material.textfield.TextInputEditText>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/notes_text_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/start_guideline"
        app:layout_constraintEnd_toEndOf="@+id/end_guideline"
        app:layout_constraintTop_toBottomOf="@id/title_text_layout"
        android:layout_marginTop="24dp"
        app:endIconMode="clear_text">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/notes_edit_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/notes"
            android:inputType="textMultiLine">
        </com.google.android.material.textfield.TextInputEditText>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.divider.MaterialDivider
        android:id="@+id/daily_divider"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/notes_text_layout"
        android:layout_marginTop="24dp">
    </com.google.android.material.divider.MaterialDivider>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/difficulty_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/start_guideline"
        app:layout_constraintTop_toBottomOf="@id/daily_divider"
        android:text="@string/difficulty"
        android:textSize="20sp"
        android:layout_marginTop="24dp">
    </com.google.android.material.textview.MaterialTextView>

    <com.google.android.material.button.MaterialButtonToggleGroup
        android:id="@+id/difficulty_button_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/start_guideline"
        app:layout_constraintTop_toBottomOf="@id/difficulty_text"
        app:layout_constraintEnd_toEndOf="@id/end_guideline"
        android:layout_marginTop="10dp"
        app:singleSelection="true">

        <com.google.android.material.button.MaterialButton
            style="@style/Widget.App.Button.OutlinedButton.IconOnly"
            android:id="@+id/trivial_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:icon="@drawable/trivial"
            android:paddingStart="32dp"
            android:paddingEnd="32dp"
            app:iconTint="@color/black">
        </com.google.android.material.button.MaterialButton>

        <com.google.android.material.button.MaterialButton
            style="@style/Widget.App.Button.OutlinedButton.IconOnly"
            android:id="@+id/easy_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:icon="@drawable/easy"
            android:paddingStart="32dp"
            android:paddingEnd="32dp"
            app:iconTint="@color/black">
        </com.google.android.material.button.MaterialButton>

        <com.google.android.material.button.MaterialButton
            style="@style/Widget.App.Button.OutlinedButton.IconOnly"
            android:id="@+id/medium_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:icon="@drawable/medium"
            android:paddingStart="32dp"
            android:paddingEnd="32dp"
            app:iconTint="@color/black">
        </com.google.android.material.button.MaterialButton>

        <com.google.android.material.button.MaterialButton
            style="@style/Widget.App.Button.OutlinedButton.IconOnly"
            android:id="@+id/hard_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:icon="@drawable/hard"
            android:paddingStart="32dp"
            android:paddingEnd="32dp"
            app:iconTint="@color/black">
        </com.google.android.material.button.MaterialButton>
    </com.google.android.material.button.MaterialButtonToggleGroup>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/trivial_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/start_guideline"
        app:layout_constraintTop_toBottomOf="@id/difficulty_button_group"
        android:text="@string/trivial"
        android:layout_marginTop="5dp"
        android:layout_marginStart="44dp">
    </com.google.android.material.textview.MaterialTextView>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/easy_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/start_guideline"
        app:layout_constraintTop_toBottomOf="@id/difficulty_button_group"
        android:text="@string/easy"
        android:layout_marginTop="5dp"
        android:layout_marginStart="128dp">
    </com.google.android.material.textview.MaterialTextView>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/medium_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@id/end_guideline"
        app:layout_constraintTop_toBottomOf="@id/difficulty_button_group"
        android:text="@string/medium"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="115dp">
    </com.google.android.material.textview.MaterialTextView>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/hard_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@id/end_guideline"
        app:layout_constraintTop_toBottomOf="@id/difficulty_button_group"
        android:text="@string/hard"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="44dp">
    </com.google.android.material.textview.MaterialTextView>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/reset_counter_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/start_guideline"
        app:layout_constraintTop_toBottomOf="@id/difficulty_button_group"
        android:text="@string/reset_counter"
        android:textSize="20sp"
        android:layout_marginTop="48dp">
    </com.google.android.material.textview.MaterialTextView>

    <com.google.android.material.button.MaterialButtonToggleGroup
        android:id="@+id/reset_counter_button_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/start_guideline"
        app:layout_constraintTop_toBottomOf="@id/reset_counter_text"
        app:layout_constraintEnd_toEndOf="@id/end_guideline"
        android:layout_marginTop="10dp"
        app:singleSelection="true">

        <com.google.android.material.button.MaterialButton
            style="?attr/materialButtonOutlinedStyle"
            android:id="@+id/daily_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/daily">
        </com.google.android.material.button.MaterialButton>

        <com.google.android.material.button.MaterialButton
            style="?attr/materialButtonOutlinedStyle"
            android:id="@+id/weekly_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/weekly">
        </com.google.android.material.button.MaterialButton>

        <com.google.android.material.button.MaterialButton
            style="?attr/materialButtonOutlinedStyle"
            android:id="@+id/monthly_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/monthly">
        </com.google.android.material.button.MaterialButton>
    </com.google.android.material.button.MaterialButtonToggleGroup>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/scheduling_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/start_guideline"
        app:layout_constraintTop_toBottomOf="@id/reset_counter_button_group"
        android:text="@string/scheduling"
        android:textSize="20sp"
        android:layout_marginTop="28dp">
    </com.google.android.material.textview.MaterialTextView>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/start_date_text_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/start_guideline"
        app:layout_constraintEnd_toEndOf="@id/end_guideline"
        app:layout_constraintTop_toBottomOf="@id/scheduling_text"
        android:layout_marginTop="10dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/start_date_edit_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/start_date"
            android:inputType="date">
        </com.google.android.material.textfield.TextInputEditText>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/reminder_text_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/start_guideline"
        app:layout_constraintEnd_toEndOf="@id/end_guideline"
        app:layout_constraintTop_toBottomOf="@id/start_date_text_layout"
        android:layout_marginTop="10dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/reminder_edit_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/reminder"
            android:inputType="time">
        </com.google.android.material.textfield.TextInputEditText>
    </com.google.android.material.textfield.TextInputLayout>
</androidx.constraintlayout.widget.ConstraintLayout>